ODE CHANGELOG
-------------

the rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every CVS log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------

05/18/04 russ

	* added the QuickStep solver
	
	* added contact parameter functions.

05/05/04 adam

        * use dRandInt instead of rand() in stepfast.

04/21/04 russ

	* added auto-disable support from Aras Pranckevicius (with
	  modifications by russ). this useful feature can speed up
	  simulation significantly in some cases.
	
	* various internal tidyups.

04/20/04 russ

	* changed the meaning of the 'index' argument to dJointGetBody():
	  it was the only remaining API function that does not respect
	  dJOINT_REVERSE (spotted by Matthew D. Hancher).
	
	* updated the C++ headers: fixed two minor bugs and added
	  support for dQuadTreeSpace, dRay, and the dGeom::getSpace() method
	  (from Matthew D. Hancher).

04/18/04 russ

	* changed the way that the dInfinity constant is implemented: now it
	  is #defined to be one of: FLT_MAX, DBL_MAX, HUGE_VAL, HUGE_VALF, or
	  a large numeric constant. previously it was a variable that was
	  exported from the library. this simplifies the configuration and
	  build process quite a bit, especially in the case of DLLs.
	
	* removed the old, deprecated collision system (geom.cpp,space.cpp,
	  geom.h,space.h,odecpp_old_collision.h). the ODE_OLD_COLLISION
	  configuration setting no longer has any meaning.
	
	* removed support for dGeomGroups, which have been deprecated for
	  a while and are equivalent to 'spaces' anyway.

04/13/04 russ

	* bug fix in dMassSetCappedCylinder(), from Matthew D. Hancher.

04/08/04 russ

	* added trimesh-CCylinder capability, from Vadim Macagon
	  <vadim_mcagon@hotmail.com>.

04/04/04 adam

        * yet another rewrite of triangle-box collision code, this